# drone_alarm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  alarm.py  config.example.yaml  drone_alarm.py  drone_alarm.service  install.sh  lint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  tts.py
